--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-img,h,article,p{
+img,h,article,p,img{
   user-select: none;
+  pointer-events: none;
 }
 @layer utilities {
   .text-balance {
